--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ ehthumbs.db
 Icon?
 Thumbs.db
 *.DS_Store
+.ipynb_checkpoints/
 *traffic*[.csv, .tar.gz, .zip] 
 *pollution*[.csv, .tar.gz, .zip] 
-
+data/*
